# Chat-Firebase-Apache-Camel

./: .gitignore  .project  Kubernetes.md  README.md  Terraform.md  apply_k8s_configs.sh  docker-compose.yaml
.github/workflows/: aggregated-messages-consumer-deploy.yml  auth-microservice-deploy.yml  camel-microservice-deploy.yml  (+2 more)
aggregated-messages-consumer/: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  kafka-consumer.py  kafka-producer.py  kafka_consumer.py  run.py
apache-camel-service-bus/: .dockerignore  Dockerfile  README.md  pom.xml
api-gateway/: README.md  auth-health-check-policy.yaml  auth-http-route.yaml  chat-health-check-policy.yaml  chat-http-route.yaml  gateway.yaml
auth-microservice/: .env  .gitignore  Dockerfile  Pipfile  README.md  alembic.ini
auth-validator/: .gitignore  Pipfile  README.md  auth_validator.py  setup.cfg
auth-validator/src/auth_validator/: __init__.py  auth_validator.py
auth-validator/tests/: test_auth_validator.py
chat-microservice/: .env  .gitignore  Dockerfile  Pipfile  README.md
frontend-web/: .env  Dockerfile  README.md  entrypoint.sh  package-lock.json  package.json  tsconfig.json
k8s/: kafka-deployment.yaml  kafka-service.yaml  zookeeper-deployment.yaml  zookeeper-service.yaml
python-kafka-poc/: Pipfile  kafka-consumer.py  kafka-producer.py
terraform/: .gitignore  api_gateway.tf  auth-microservice.tf  backend.tf  bucket.tf  firebase.tf  gke.tf  gke_secrets.tf  kafka.tf  outputs.tf  provider.tf  service_account_github.tf  terraform-admin.tf  terraform.tfvars  versions.tf  vpc.tf
(+116 files in other folders)
