

[metadata]
name = auth_validator_charlyjazz
version = 1.0.0
author = Carlos Azuaje
description = Just a class to use in the microservices to check the JWT
url = https://github/charlyjazz
keywords = jwt, jose, auth
project_urls =
    Bug Tracker = https://github.com/CharlyJazz/Chat-Firebase-Apache-Camel/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9, <4
install_requires = 
    fastapi
    pydantic
    jose
[options.extras_require]
test = 
    pytest
    coverage
[options.packages.find]
where = src
